syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum VehicleInteractType {
	VEHICLE_INTERACT_NONE = 0;
	VEHICLE_INTERACT_IN = 1;
	VEHICLE_INTERACT_OUT = 2;
}
